src/App.module.css
p, h1, h2, label, input, button {
  font-family: 'Nixie One', cursive;
  font-size: 130%;
}

h1{
  font-size: 200%;
}

/* LAYOUT */
.App {
  width: 90%;
  margin: 0 auto;
}

/* SITE HEADER */
.Header {
  position: fixed;
  top: 0;
  right: 0;
  left: 0;
  z-index: 5;
  background-color: white;
  border-bottom: 1px solid #000000;
}

.HeaderLink {
  padding: 10px;
}

.Header h1{
  font-family: 'Zilla Slab Highlight', cursive;
  text-transform: uppercase;
  font-size: 400%;
  color: black;
  text-align: center;
}

/* NAVBAR */
.NavSmScreen{
  display: none;
  z-index: 6;
  position: fixed;
  top: 35px;
}

.NavLgScreen {
  position: fixed;
  top: 135px;
  left: 0;
}

/* PAGE PANELS */
.MainContent{
  position: relative;
  top: 135px;
}

.Image {
  max-height: 40vh;
  max-width: 100%;
  object-fit: contain;
}

.MiddlePanel{
  position: relative;
  margin: 0 auto;
  border-right: 1px solid #000000;
  border-left: 1px solid #000000;
}

.RightPanel {
  position: fixed;
  right: 0;
}

@media screen and (max-width:991px) {

  /* HEADER */
  .Header h1{
    font-size: 200%;
  }
  .HeaderLgScreen {
    display: none;
  }

  /* NAVBAR */
  .NavLgScreen{
    display: none;
  }
  .NavSmScreen{
    display: block;
  }

  /* PAGE PANELS */
  .MiddlePanel{
    position: relative;
    margin-left: 0;
    border-right: 1px solid #000000;
    border-left: 0px;
  }
}

@media screen and (max-width:767px) {

  /* PAGE PANELS */
  .MiddlePanel{
    border-right: 0px;
  }

  .RightPanel{
    display: none;
  }
}

